# integrate-cuda

./: .gitignore  CMakeLists.txt  README.md  csv_maker.py  func1.cfg  func2.cfg  func3.cfg  graph_maker.py  integrate.cu  integrate.cuh  main.cu  other_methods.csv  runner.py  table.csv  tests.py  utils.cpp  utils.hpp
include/: integratec.cuh
